--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 
 OWL-dev-main/.idea/
+
+OWL-dev-main/OWLcontroller/.idea/autoLatencyApp.iml
+
+OWL-dev-main/OWLcontroller/.idea/misc.xml
+
+OWL-dev-main/OWLcontroller/.idea/workspace.xml
