--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@ OWL-dev-main/OWLcontroller/.idea/autoLatencyApp.iml
 OWL-dev-main/OWLcontroller/.idea/misc.xml
 
 OWL-dev-main/OWLcontroller/.idea/workspace.xml
+
+OWL-dev-main/OWLcontroller/.idea/inspectionProfiles/profiles_settings.xml
+
+OWL-dev-main/OWLcontroller/.idea/vcs.xml
+
+OWL-dev-main/OWLhostPC/.idea/
