drive master fixed and worked, adding log files to each test and each repeat

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@ OWL-dev-main/OWLcontroller/.idea/inspectionProfiles/profiles_settings.xml
 OWL-dev-main/OWLcontroller/.idea/vcs.xml
 
 OWL-dev-main/OWLhostPC/.idea/
+
+OWL-dev-main/OWLcontroller/defaultConfiguration_New_2021_02_04 12_18_59.json
+
+OWL-dev-main/OWLcontroller/defaultConfiguration_New_2021_02_03 19_02_29.json
