--- a/OWL-dev-main/OWLcontroller/legacyModeConfigFiles/testsByGroups/hermes - Flow test.ini
+++ b/OWL-dev-main/OWLcontroller/legacyModeConfigFiles/testsByGroups/hermes - Flow test.ini
@@ -10,7 +10,7 @@ verificationscript = VerificationScripts\power-on-ready-typical.pevs
 ; supported BoardVersion : 3010, 2002
 BoardVersion            = 3010
 testruntimeinseconds = 10
-results = Results\
+results = Results\error\
 delay = 0
 
 
