--- a/OWL-dev-main/OWLcontroller/legacyModeConfigFiles/testsByGroups/hermes - Flow test.ini
+++ b/OWL-dev-main/OWLcontroller/legacyModeConfigFiles/testsByGroups/hermes - Flow test.ini
@@ -1,6 +1,6 @@
 ;## Hermes
 [Group00/Hermes/test/00]
-testname = Hermes - Power On Ready
+testname = Hermes - Power On Ready drive master
 usegpiotopowercycle = 1
 recordingoptions = RecordingOptions\por_hermes_filter_os.rec
 generationoptions = GenerationOptions\por.gen
@@ -16,7 +16,7 @@ delay = 0
 
 ;## Hermes
 [Group00/Hermes/test/01]
-testname = Hermes - Power On Ready 2
+testname = Hermes - Power On Ready 2 reboot
 usegpiotopowercycle = 1
 recordingoptions = RecordingOptions\por_hermes_filter_os.rec
 generationoptions = GenerationOptions\por.gen
