Almost all the Todohave been done and started to check analyzer

--- a/OWL-dev-main/OWLcontroller/legacyModeConfigFiles/testsByGroups/Phoenix.ini
+++ b/OWL-dev-main/OWLcontroller/legacyModeConfigFiles/testsByGroups/Phoenix.ini
@@ -7,7 +7,7 @@ usegpiotopowercycle = 1
 recordingoptions = RecordingOptions\por_phoenix_filter_os.rec
 generationoptions = GenerationOptions\por.gen
 trainerinitscript = TrainerScripts\trainerinit_typical.peg
-trainerscript = TrainerScripts\power-on-ready-typical_gen3.peg
+sequancefile = costumTests\EladFlowTest.json
 verificationscript = VerificationScripts\power-on-ready-typical.pevs
 ; supported BoardVersion : 3010, 2002
 BoardVersion            = 3010
@@ -21,7 +21,7 @@ usegpiotopowercycle = 1
 recordingoptions = RecordingOptions\por_phoenix_filter_os.rec
 generationoptions = GenerationOptions\por.gen
 trainerinitscript = TrainerScripts\trainerinit_typical.peg
-trainerscript = TrainerScripts\gen2_check.peg
+sequancefile = costumTests\EladFlowTest.json
 verificationscript = VerificationScripts\power-on-ready-typical.pevs
 ; supported BoardVersion : 3010, 2002
 BoardVersion            = 3010
