flow test fixing

--- a/OWL-dev-main/OWLcontroller/legacyModeConfigFiles/testsByGroups/hermes - Flow test.ini
+++ b/OWL-dev-main/OWLcontroller/legacyModeConfigFiles/testsByGroups/hermes - Flow test.ini
@@ -4,7 +4,7 @@
 [Group00/Hermes/test/00]
 testname = Hermes - Power On Ready drive master
 usegpiotopowercycle = 1
-recordingoptions = RecordingOptions\por_hermes_filter_os.rec
+recordingoptions = RecordingOptions\test_ro.rec
 generationoptions = GenerationOptions\por.gen
 trainerinitscript = TrainerScripts\trainerinit_typical.peg
 sequancefile = costumTests\EladsecondFlowTest.json
