trace name and new class for vse

--- a/OWL-dev-main/OWLcontroller/legacyModeConfigFiles/testsByGroups/hermes - Flow test.ini
+++ b/OWL-dev-main/OWLcontroller/legacyModeConfigFiles/testsByGroups/hermes - Flow test.ini
@@ -8,7 +8,7 @@ recordingoptions = RecordingOptions\test_ro.rec
 generationoptions = GenerationOptions\por.gen
 trainerinitscript = TrainerScripts\trainerinit_typical.peg
 sequancefile = costumTests\EladsecondFlowTest.json
-verificationscript = VerificationScripts\power-on-ready-typical.pevs
+verificationscript = VerificationScripts\examp_nvme_errors.pevs
 ; supported BoardVersion : 3010, 2002
 BoardVersion            = 3010
 testruntimeinseconds = 10
