This commit consist of the change from Json costum test files to OWLTest files (text file with made up parser)

--- a/OWL-dev-main/OWLcontroller/testconfigIniJsons/hermes - Flow test - Copy.ini
+++ b/OWL-dev-main/OWLcontroller/testconfigIniJsons/hermes - Flow test - Copy.ini
@@ -1,11 +1,11 @@
 ;## Hermes
 [Group00/Hermes/test/00]
-testname = Hermes - Power On Ready 0
+testname = Hermes - Power On Ready owlTestLog
 usegpiotopowercycle = 1
 recordingoptions = RecordingOptions\por_hermes_filter_os.rec
 generationoptions = GenerationOptions\por.gen
 trainerinitscript = TrainerScripts\trainerinit_typical.peg
-sequancefile = costumTests\EladsecondFlowTest.json
+sequancefile = costumTests\driveMaster.OwlTest
 verificationscript = VerificationScripts\power-on-ready-typical.pevs
 ; supported BoardVersion : 3010, 2002
 BoardVersion            = 3010
