--- a/OWL-dev-main/OWLcontroller/testconfigIniJsons/hermes - Flow test.ini
+++ b/OWL-dev-main/OWLcontroller/testconfigIniJsons/hermes - Flow test.ini
@@ -23,7 +23,7 @@ usegpiotopowercycle = 1
 recordingoptions = RecordingOptions\por_hermes_filter_os.rec
 generationoptions = GenerationOptions\por.gen
 trainerinitscript = TrainerScripts\trainerinit_typical.peg
-sequancefile = costumTests\reboot.OwlTest
+sequancefile = reboot.OwlTest
 verificationscript = VerificationScripts\power-on-ready-typical.pevs
 ; supported BoardVersion : 3010, 2002
 BoardVersion            = 3010
