--- a/OWL-dev-main/OWLcontroller/TestConfigIni/hermes - Flow test.ini
+++ b/OWL-dev-main/OWLcontroller/TestConfigIni/hermes - Flow test.ini
@@ -31,3 +31,18 @@ testruntimeinseconds = 10
 results = Results\
 delay = 0
 
+;## Calypso
+[Group00/Calypso/test/01]
+testname = Calypso - Power On Ready 2 reboot
+usegpiotopowercycle = 1
+recordingoptions = RecordingOptions\por_hermes_filter_os.rec
+generationoptions = GenerationOptions\por.gen
+trainerinitscript = TrainerScripts\trainerinit_typical.peg
+sequancefile = costumTests\reboot.OwlTest
+verificationscript = VerificationScripts\power-on-ready-typical.pevs
+; supported BoardVersion : 3010, 2002
+BoardVersion            = 3010
+testruntimeinseconds = 10
+results = Results\
+delay = 0
+
